day23/badpod.yml
apiVersion: v1
kind: Pod
metadata:
  name: bad
  namespace: admission-lab
spec:
  containers:
  - name: nginx
    image: nginx
    securityContext:
      privileged: true
