day23/goodpod.yml
apiVersion: v1
kind: Pod
metadata:
  name: good
  namespace: admission-lab
spec:
  containers:
  - name: nginx
    image: nginx
    securityContext:
      privileged: false
